# agno-ollama-chatbot

./: .gitignore  CLAUDE.md  GETTING_STARTED.md  MVPBlocks.md  PROMPTS_AND_REASONING.md  QUICK_TEST.md  README.md  RUN_ME.md  SCRIPTS_SUMMARY.md  TEST_GUIDE.md  UI_GUIDE.md  start.sh
backend/: .env.example  Makefile  chat_ui.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  chatbot_agent.py  title_agent.py
backend/app/memory/: __init__.py  store.py
backend/app/services/: __init__.py  ollama_client.py
backend/metrics/: .gitkeep  chat_session_20251108_172407.json  chat_session_20251108_172631.json  chat_session_20251108_172855.json  chat_session_20251108_173042.json  chat_session_20251108_173113.json  setup_metrics_20251108_172115.json  setup_metrics_20251108_172159.json  setup_metrics_20251108_172303.json  setup_metrics_20251108_173051.json  setup_metrics_20251108_174218.json
backend/scripts/: README.md  chat-demo.sh  chat.sh  fix-model.sh  launch_ui.sh  quick-test.sh  setup.sh  start-ollama.sh  start.sh  test-api.sh  test-full.sh
backend/tests/: __init__.py  test_chat_nonstream.py  test_chat_stream.py  test_chat_ui.py  test_chatbot_agent.py  test_config.py  test_endpoints.py  test_health.py  test_main_simple.py  test_memory.py
docs/: ARCHITECTURE.md  MODEL_COMPARISON_RESEARCH.md  PRD.md  PROJECT_CONVERSATION_LOG.md  PROMPT.md  TEST_COVERAGE_REPORT.md
frontend/: .env.example  PROJECT_CONVERSATION_LOG.md  eslint.config.js  package-lock.json  package.json  (+4 more)
(+26 files in other folders)
